<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/clicked_car_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/clickedCarTextView" />


    <Button
        android:text="@string/cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cancelButton" />

    <Button
        android:text="@string/delete_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/deleteButton" />

    <Button
        android:text="@string/proceed_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/proceedButton" />

</LinearLayout>